--- a/Matchismo/Base.lproj/Main.storyboard
+++ b/Matchismo/Base.lproj/Main.storyboard
@@ -216,7 +216,7 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xe3-h6-otX">
@@ -289,6 +289,7 @@
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="rbO-bX-SKx" secondAttribute="bottom" constant="8" symbolic="YES" id="sqO-z4-OcP"/>
                         </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <tabBarItem key="tabBarItem" title="Playing Card" image="cards-32" id="SmE-5j-57x"/>
                     <navigationItem key="navigationItem" title="Playing Card Game" id="eBH-go-w17">
                         <barButtonItem key="rightBarButtonItem" title="History" id="Mth-ei-cEo"/>
@@ -339,19 +340,6 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c4c-Wt-osE">
-                                <rect key="frame" x="289" y="579" width="66" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="66" id="1L3-w5-rUx"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
-                                <state key="normal" title="RESET" backgroundImage="cardfront">
-                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="touchResetButton:" destination="BuX-qu-MJs" eventType="touchUpInside" id="ZZT-qZ-YIJ"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eac-og-8um">
                                 <rect key="frame" x="229" y="579" width="52" height="31"/>
                                 <constraints>
@@ -363,6 +351,19 @@
                                 </state>
                                 <connections>
                                     <action selector="touchAddCardsButton:" destination="BuX-qu-MJs" eventType="touchUpInside" id="u0G-oy-kjz"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c4c-Wt-osE">
+                                <rect key="frame" x="289" y="579" width="66" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="66" id="1L3-w5-rUx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                <state key="normal" title="RESET" backgroundImage="cardfront">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="touchResetButton:" destination="BuX-qu-MJs" eventType="touchUpInside" id="ZZT-qZ-YIJ"/>
                                 </connections>
                             </button>
                         </subviews>
