--- a/Matchismo/Base.lproj/Main.storyboard
+++ b/Matchismo/Base.lproj/Main.storyboard
@@ -260,7 +260,7 @@
                                     <constraint firstAttribute="height" constant="40" id="VBc-dJ-9xL"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4oL-8T-OYF">
@@ -317,75 +317,74 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pDo-ry-WOX">
-                                <rect key="frame" x="20" y="589" width="100" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lv4-55-hLf">
+                                <rect key="frame" x="53" y="20" width="269" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="RB8-g3-ojv"/>
-                                    <constraint firstAttribute="height" constant="21" id="ej2-kW-3gb"/>
+                                    <constraint firstAttribute="height" constant="40" id="VER-vk-go1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vMz-X6-nrI">
+                                <rect key="frame" x="282" y="579" width="73" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="73" id="fhc-Rc-2NP"/>
+                                </constraints>
+                                <state key="normal" title="RESET" backgroundImage="cardfront">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="touchResetButton:" destination="BuX-qu-MJs" eventType="touchUpInside" id="3bJ-fL-aaA"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QAi-km-gh9">
+                                <rect key="frame" x="20" y="589" width="124" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="afm-EK-P97"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tqc-xV-f1J">
-                                <rect key="frame" x="0.0" y="63" width="375" height="502"/>
-                                <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lv4-55-hLf">
-                                <rect key="frame" x="53" y="20" width="269" height="40"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dEF-Qc-xX2">
+                                <rect key="frame" x="222" y="579" width="52" height="31"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="sGz-VF-goj"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eac-og-8um">
-                                <rect key="frame" x="229" y="579" width="52" height="31"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="52" id="YBI-HI-KCV"/>
+                                    <constraint firstAttribute="width" constant="52" id="DPq-7Y-0ZC"/>
                                 </constraints>
                                 <state key="normal" title="Add 3" backgroundImage="cardfront">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="touchAddCardsButton:" destination="BuX-qu-MJs" eventType="touchUpInside" id="u0G-oy-kjz"/>
+                                    <action selector="touchAddCardsButton:" destination="BuX-qu-MJs" eventType="touchUpInside" id="5NC-0I-HDO"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c4c-Wt-osE">
-                                <rect key="frame" x="289" y="579" width="66" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="66" id="1L3-w5-rUx"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
-                                <state key="normal" title="RESET" backgroundImage="cardfront">
-                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="touchResetButton:" destination="BuX-qu-MJs" eventType="touchUpInside" id="ZZT-qZ-YIJ"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7vh-pX-Idu">
+                                <rect key="frame" x="0.0" y="63" width="375" height="513"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="c4c-Wt-osE" firstAttribute="leading" secondItem="Eac-og-8um" secondAttribute="trailing" constant="8" symbolic="YES" id="5If-Lo-ThL"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="c4c-Wt-osE" secondAttribute="trailing" id="9OZ-FA-HdH"/>
-                            <constraint firstItem="pDo-ry-WOX" firstAttribute="top" secondItem="Tqc-xV-f1J" secondAttribute="bottom" constant="24" id="Jgc-HL-TIg"/>
-                            <constraint firstItem="Tqc-xV-f1J" firstAttribute="leading" secondItem="XLE-FM-VIR" secondAttribute="leading" id="Kcd-xu-ebb"/>
-                            <constraint firstItem="Eac-og-8um" firstAttribute="centerY" secondItem="c4c-Wt-osE" secondAttribute="centerY" id="MWg-lk-gHs"/>
-                            <constraint firstItem="Tqc-xV-f1J" firstAttribute="top" secondItem="Lv4-55-hLf" secondAttribute="bottom" constant="3" id="PqL-8b-dij"/>
-                            <constraint firstItem="DLl-w3-IFL" firstAttribute="top" secondItem="pDo-ry-WOX" secondAttribute="bottom" constant="8" symbolic="YES" id="RbR-cF-ptT"/>
-                            <constraint firstItem="Eac-og-8um" firstAttribute="baseline" secondItem="c4c-Wt-osE" secondAttribute="firstBaseline" id="TMY-YV-HBz"/>
-                            <constraint firstItem="DLl-w3-IFL" firstAttribute="top" secondItem="Eac-og-8um" secondAttribute="bottom" constant="8" symbolic="YES" id="V0F-oY-XAb"/>
-                            <constraint firstItem="Lv4-55-hLf" firstAttribute="top" secondItem="g5c-xq-kIY" secondAttribute="bottom" id="XSN-tE-HF9"/>
-                            <constraint firstAttribute="trailing" secondItem="Tqc-xV-f1J" secondAttribute="trailing" id="ZLg-11-TN6"/>
-                            <constraint firstItem="Tqc-xV-f1J" firstAttribute="centerX" secondItem="Lv4-55-hLf" secondAttribute="centerX" id="iZb-To-pU0"/>
-                            <constraint firstItem="Lv4-55-hLf" firstAttribute="leading" secondItem="XLE-FM-VIR" secondAttribute="leadingMargin" constant="37" id="jbf-ZE-3L8"/>
-                            <constraint firstItem="Eac-og-8um" firstAttribute="top" secondItem="c4c-Wt-osE" secondAttribute="top" id="opo-IH-pBN"/>
-                            <constraint firstItem="c4c-Wt-osE" firstAttribute="baseline" secondItem="Eac-og-8um" secondAttribute="firstBaseline" id="rBK-gc-hdV"/>
-                            <constraint firstItem="pDo-ry-WOX" firstAttribute="leading" secondItem="XLE-FM-VIR" secondAttribute="leadingMargin" constant="4" id="xAm-9P-SNe"/>
-                            <constraint firstItem="Eac-og-8um" firstAttribute="top" secondItem="Tqc-xV-f1J" secondAttribute="bottom" constant="14" id="zzv-oy-ywP"/>
+                            <constraint firstItem="DLl-w3-IFL" firstAttribute="top" secondItem="dEF-Qc-xX2" secondAttribute="bottom" constant="8" symbolic="YES" id="9Z8-xI-twH"/>
+                            <constraint firstItem="dEF-Qc-xX2" firstAttribute="baseline" secondItem="vMz-X6-nrI" secondAttribute="firstBaseline" id="CG0-hQ-r43"/>
+                            <constraint firstItem="DLl-w3-IFL" firstAttribute="top" secondItem="QAi-km-gh9" secondAttribute="bottom" constant="8" symbolic="YES" id="Juu-h1-g2t"/>
+                            <constraint firstItem="vMz-X6-nrI" firstAttribute="leading" secondItem="dEF-Qc-xX2" secondAttribute="trailing" constant="8" symbolic="YES" id="KHJ-Cd-LKY"/>
+                            <constraint firstItem="7vh-pX-Idu" firstAttribute="top" secondItem="Lv4-55-hLf" secondAttribute="bottom" constant="3" id="PvX-c4-xIu"/>
+                            <constraint firstItem="vMz-X6-nrI" firstAttribute="baseline" secondItem="dEF-Qc-xX2" secondAttribute="firstBaseline" id="Uga-oz-TKt"/>
+                            <constraint firstItem="7vh-pX-Idu" firstAttribute="centerX" secondItem="Lv4-55-hLf" secondAttribute="centerX" id="Xe5-uh-cOj"/>
+                            <constraint firstItem="QAi-km-gh9" firstAttribute="leading" secondItem="XLE-FM-VIR" secondAttribute="leadingMargin" constant="4" id="b7i-Q1-PIG"/>
+                            <constraint firstItem="7vh-pX-Idu" firstAttribute="leading" secondItem="XLE-FM-VIR" secondAttribute="leading" id="d8n-UH-QMI"/>
+                            <constraint firstItem="Lv4-55-hLf" firstAttribute="top" secondItem="g5c-xq-kIY" secondAttribute="bottom" id="kla-bJ-3qy"/>
+                            <constraint firstItem="dEF-Qc-xX2" firstAttribute="leading" secondItem="QAi-km-gh9" secondAttribute="trailing" constant="78" id="kuf-BG-uzt"/>
+                            <constraint firstItem="Lv4-55-hLf" firstAttribute="leading" secondItem="XLE-FM-VIR" secondAttribute="leadingMargin" constant="37" id="mqB-k4-pJI"/>
+                            <constraint firstItem="QAi-km-gh9" firstAttribute="top" secondItem="7vh-pX-Idu" secondAttribute="bottom" constant="13" id="oxY-1F-llQ"/>
+                            <constraint firstAttribute="trailing" secondItem="7vh-pX-Idu" secondAttribute="trailing" id="pqI-oQ-bKs"/>
+                            <constraint firstItem="dEF-Qc-xX2" firstAttribute="top" secondItem="7vh-pX-Idu" secondAttribute="bottom" constant="3" id="qRr-8w-QLg"/>
+                            <constraint firstItem="dEF-Qc-xX2" firstAttribute="top" secondItem="vMz-X6-nrI" secondAttribute="top" id="yIS-Xj-PWQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vMz-X6-nrI" secondAttribute="trailing" constant="4" id="z8n-EY-75H"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Set" image="workflow-32" id="axg-1n-zeX"/>
@@ -394,9 +393,9 @@
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="addCardsButton" destination="Eac-og-8um" id="VCh-7F-47f"/>
-                        <outlet property="gridView" destination="Tqc-xV-f1J" id="QuB-gQ-uQ2"/>
-                        <outlet property="scoreLabel" destination="pDo-ry-WOX" id="oCN-KN-eXh"/>
+                        <outlet property="addCardsButton" destination="dEF-Qc-xX2" id="WlC-7c-fGc"/>
+                        <outlet property="gridView" destination="7vh-pX-Idu" id="Llh-c1-PEj"/>
+                        <outlet property="scoreLabel" destination="QAi-km-gh9" id="Bge-Xc-MTD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DFc-oc-P8K" userLabel="First Responder" sceneMemberID="firstResponder"/>
